src/main/WebApp/resources/css/style.css
/* ... */
:not(#foo) input[type=radio]::after{
	background-position: -15px -10px;
}

:not(#foo) input[type=radio]:hover::after {
	background-position: -15px -60px;
}

:not(#foo) input[type=radio]:checked::after,
:not(#foo) input[type=radio]:checked:hover::after {
	background-position: -15px -110px
}



.selectbox {
	cursor: default;
	display: inline-table;
	display: inline-block;
	line-height: 37px;
	vertical-align: bottom;
	padding: 0;
	margin: 0;
}

div.selectbox {
	border: 1px solid #dcdcdc;
	position: relative;
	overflow: visible;
	height: 39px;
	width: 160px;
	background: #ffffff url(../images/down-arrow.png) right 18px no-repeat;
}

div.selectbox[data-level="0"] {
	width: 70px;
}

div.selectbox[data-level="1"] {
	width: 226px;
	border-left-width: 0;
}

div.selectbox[data-level="2"] {
	margin-top: 10px;
	width: 296px;
}

ol.selectbox[tabindex]{
	cursor: pointer;
}

ol.selectbox {
	position: absolute;
	top: -1px; left: -1px; right: -1px;
}

div.affiliation-dropdown-container {
	position: absolute;
	z-index: 2000;
	background: white;
	max-height: 200px;
	overflow: auto;
	border: 1px solid #dcdcdc;
	border-left-width: 0;
	border-right-width: 0;
}

ol.affiliation-dropdown li,
ol.selectbox li {
	padding: 0 15px;
	color: #757474;
	font-size: 14px;
	font-weight: 500;
	list-style: none;
	display: none;
}

ol.affiliation-dropdown {
	padding-left: 0;
	margin-top: -1px;
}

ol.affiliation-dropdown li {
	display: block;
	line-height: 40px;
	border: 1px solid #dcdcdc;
	border-bottom-width: 0;
	width: 450px;
}

li.affiliation-choice.selected,
ol.affiliation-dropdown li:hover {
	background: #dcdcdc;
}

ol.affiliation-dropdown li.last {
	border-bottom-width: 1px;
}

ol.selectbox li.placeholder {
	font-style: italic;
	color: #757474;
}

ol.selectbox li.selected,
ol.selectbox.open li[data-value] {
	display: block;
}

ol.selectbox.open li.selected,
ol.selectbox.open li[data-value]:hover,
ol.selectbox.open li[data-value].over {
	background: #dcdcdc;
}

ol.selectbox.open {
	z-index: 9999;
	position: absolute;
	top: -1px; left: -1px; right: -1px;
	height: auto;
	background: #ffffff;
	border: 1px solid #dcdcdc;
	max-height: 500px;
	overflow-x: hidden;
	overflow-y: scroll;
}

.signup *:focus {
	outline: none;
}
.signup input {
	vertical-align: bottom;
	color: #757474;
	font-size: 14px;
	font-weight: 500;
	line-height: 25px;
	border: 1px solid #dcdcdc;
	background: #ffffff;
	padding: 6px 10px;
	margin: 0;
	min-height: 39px;
}

.signup input[size='2']{ width: 60px; border-left-width: 0; border-right-width: 0; }
.signup input[size='4']{ width: 75px; }
.signup input[size='10']{ width: 143px; margin: 0 10px 0 0; }
.signup input[size='20']{ width: 296px; }


iframe.agreement {
	color: #757474;
	background: #fbfbfb;
	border: 1px solid #dcdcdc;
	padding: 5px;
	-webkit-transform: translate3d(0, 0, 0);
	-webkit-backface-visibility: hidden;
	-webkit-perspective: 1000;
}


.signup .field-container {
	margin: 10px 0;
	position: relative;
	clear: both;
}


.field-container.has-floats {
	overflow: hidden;
}

.signup section.optionals,
.signup section.avatars,
.signup section.agreements {
	margin-top: 60px
}
.signup section.birthday {
	margin-bottom: 25px;
}


a.avatar {
	position: relative;
	display: inline-table;
	display: inline-block;
	margin-right: 10px;
	height: 84px;
	width: 84px;
	margin: 4px 20px 0 0;
	box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.2);
	border: 1px solid #b8b8b8;
	vertical-align: top;
}

a.avatar img{
	height: 100%;
	width: 100%;
}

a.avatar.selected {
	margin: 0 16px 0 -4px;
	border: 4px solid #89be3c;
	border-radius: 5px;
	box-shadow: none;
	height: 92px;
	width: 92px;
}


a.avatar.selected::before,
a.avatar.selected::after{
	content: ' ';
	position: absolute;
	z-index: 1999;
	top: -9px;
	right: -9px;
	width: 18px; height: 18px;
	background: url(../images/Green-Check.png) 0 0 no-repeat;
}

.signup .field-container .line {
	white-space: nowrap;
}

.signup .disabled,
.signup .field-container.invalid .line .blank,
.signup .field-container.valid .line .blank,
.signup .field-container .line span {
	display: none;
	white-space: nowrap;
}

.signup .field-container.required {
	border-left: 4px solid #b8b8b8;
}
.signup .field-container.required input{
	border-left-width: 0;
}
.signup .field-container.required input[name=year]{
	border-left-width: 1px;
}
.signup .field-container.required input[name=last]{
	border-left-width: 1px;
}

.signup .field-container.required.valid {
	border-left: 4px solid #89be3c;
}

.signup .field-container.required.invalid {
	border-left: 4px solid red;
}

.signup .field-container .line .blank span.tooltip-span {
	display: inline-block;
}

.signup .field-container .line .blank,
.signup .field-container.invalid .line span.invalid,
.signup .field-container.valid .line span.valid { display: inline; }

.signup .field-container .line span.invalid { color: red; }
.signup .field-container .line span.valid { color: #89be3c; }
.signup .field-container .line {
	color: #b8b8b8;
	line-height: 38px;
	font-style: italic;
	font-weight: normal;
	font-size: 14px;
	position: absolute;
	top: 0;
	left: 320px;
}

.needs-birthday {
	display: none;
}

.birthday-filled-in .needs-birthday { display: block; }

.signin .field-container {
	margin: 0 20px;
	position: relative;
}

.signin input {
	margin: 8px 0;
	width: 285px;
	height: 34px;
	padding: 5px;
	font-size: 16px;
	color: #757474;
	border-radius: 3px;
	border: 1px solid #a0a0a0;
	box-shadow: inset 3px 3px 10px -5px #a0a0a0;
	vertical-align: middle;
}

.signin label{ display: none; }

.signup .field-container.affiliation p {
	color: #757474;
	padding-top: 10px;
}

.signup .field-container.affiliation .line{
	top: 43px;
}

.signup div.teacher-note {
	color: #757474;
}

.signup input[type=checkbox],
.signup input[type=radio],
.signup label {
	display: inline;
	border: none;
	font-size: 1em;
	width: auto;
	height: auto;
	margin: 0 5px 5px 5px;
	padding: inherit;
	float: left;
	vertical-align: middle;
	color: #757474;
}
/* ... */

